Allow configuring the init-task view-jobs Role name and generation
Prefix the Role with the application name by default so multiple apps can
share a namespace, and add init-task-defaults.rbac knobs to rename or skip
Role generation without disabling the Job and wait-for container.

Closes #45748