@@ -19,6 +19,8 @@ import io.quarkus.kubernetes.spi.KubernetesRoleBindingBuildItem;
 import io.quarkus.kubernetes.spi.KubernetesRoleBuildItem;
 import io.quarkus.kubernetes.spi.KubernetesServiceAccountBuildItem;
 import io.quarkus.kubernetes.spi.PolicyRule;
+import io.quarkus.kubernetes.spi.RoleRef;
+import io.quarkus.kubernetes.spi.Subject;
 
 public class InitTaskProcessor {
 
@@ -77,13 +79,27 @@ public class InitTaskProcessor {
         }
 
         if (generateRoleForJobs) {
-            roles.produce(new KubernetesRoleBuildItem("view-jobs", Collections.singletonList(
-                    new PolicyRule(
-                            Collections.singletonList("batch"),
-                            Collections.singletonList("jobs"),
-                            List.of("get"))),
-                    target));
-            roleBindings.produce(new KubernetesRoleBindingBuildItem(null, "view-jobs", false, target));
+            InitTaskConfig.InitTaskRbacConfig rbac = initTaskDefaults.rbac();
+            String roleName = rbac.prefixName()
+                    ? name + "-" + rbac.name()
+                    : rbac.name();
+
+            if (rbac.generate()) {
+                roles.produce(new KubernetesRoleBuildItem(roleName, Collections.singletonList(
+                        new PolicyRule(
+                                Collections.singletonList("batch"),
+                                Collections.singletonList("jobs"),
+                                List.of("get"))),
+                        target));
+            }
+
+            // When the role name is prefixed, set the binding name explicitly so the Kubernetes
+            // extension does not double-prefix it as {app}-{app}-{role}.
+            String bindingName = rbac.prefixName() ? roleName : null;
+            roleBindings.produce(new KubernetesRoleBindingBuildItem(
+                    bindingName, null, target, Collections.emptyMap(),
+                    new RoleRef(roleName, false),
+                    new Subject("", "ServiceAccount", null, null)));
             serviceAccount.produce(new KubernetesServiceAccountBuildItem(true));
         }
     }
